--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API sgd",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/server.js",
-    "dev": "nodemon ./server/server.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel Ribeiro",
