FEAT: criação das rodas das tabelas tb_situacao_atividade e tb_situacao_tarefa

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pg-promise": "^10.11.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
